--- a/retinanet/retinanet.ipynb
+++ b/retinanet/retinanet.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 0. Set up env variables <a class=\"anchor\" id=\"head-0\"></a>\n",
+    "## 1. Set up env variables <a class=\"anchor\" id=\"head-0\"></a>\n",
     "\n",
     "When using the purpose-built pretrained models from NGC, please make sure to set the `$KEY` environment variable to the key as mentioned in the model overview. Failing to do so, can lead to errors when trying to load them as pretrained models.\n",
     "\n",
@@ -208,51 +208,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1. Install the TAO launcher <a class=\"anchor\" id=\"head-1\"></a>\n",
-    "The TAO launcher is a python package distributed as a python wheel listed in the `nvidia-pyindex` python index. You may install the launcher by executing the following cell.\n",
-    "\n",
-    "Please note that TAO Toolkit recommends users to run the TAO launcher in a virtual env with python 3.6.9. You may follow the instruction in this [page](https://virtualenvwrapper.readthedocs.io/en/latest/install.html) to set up a python virtual env using the `virtualenv` and `virtualenvwrapper` packages. Once you have setup virtualenvwrapper, please set the version of python to be used in the virtual env by using the `VIRTUALENVWRAPPER_PYTHON` variable. You may do so by running\n",
-    "\n",
-    "```sh\n",
-    "export VIRTUALENVWRAPPER_PYTHON=/path/to/bin/python3.x\n",
-    "```\n",
-    "where x >= 6 and <= 8\n",
-    "\n",
-    "We recommend performing this step first and then launching the notebook from the virtual environment. In addition to installing TAO python package, please make sure of the following software requirements:\n",
-    "* python >=3.6.9 < 3.8.x\n",
-    "* docker-ce > 19.03.5\n",
-    "* docker-API 1.40\n",
-    "* nvidia-container-toolkit > 1.3.0-1\n",
-    "* nvidia-container-runtime > 3.4.0-1\n",
-    "* nvidia-docker2 > 2.5.0-1\n",
-    "* nvidia-driver > 455+\n",
-    "\n",
-    "Once you have installed the pre-requisites, please log in to the docker registry nvcr.io by following the command below\n",
-    "\n",
-    "```sh\n",
-    "docker login nvcr.io\n",
-    "```\n",
-    "\n",
-    "You will be trigerred to enter a username and password. The username is `$oauthtoken` and the password is the API key generated from `ngc.nvidia.com`. Please follow the instructions in the [NGC setup guide](https://docs.nvidia.com/ngc/ngc-overview/index.html#generating-api-key) to generate your own API key.\n",
-    "\n",
-    "After setting up your virtual environment with the above requirements, install TAO pip package"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # SKIP this step IF you have already installed the TAO launcher.\n",
-    "# !pip3 install nvidia-pyindex\n",
-    "# !pip3 install nvidia-tao"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -278,23 +233,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Prepare dataset and pre-trained model <a class=\"anchor\" id=\"head-2\"></a>"
+    " ## 2. Download and Prepare dataset"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " We will be using the KITTI detection dataset for the tutorial. To find more details please visit\n",
-    " http://www.cvlibs.net/datasets/kitti/eval_object.php?obj_benchmark=2d. Please download the KITTI detection images (http://www.cvlibs.net/download.php?file=data_object_image_2.zip) and labels (http://www.cvlibs.net/download.php?file=data_object_label_2.zip) to $DATA_DOWNLOAD_DIR."
+    "Create a data folder inside the root directory and download the synthetic and real datasets from the provided links.\n",
+    "\n",
+    "Dataset is already formatted into train and test for both synthetic and real cases. \n",
+    "\n",
+    "We have 2 scenarios in the dataset i.e dataset with less complex background and dataset with complex background.\n",
+    "\n",
+    "\n",
+    "Following directory structure will be there according to the spec files. \n",
+    "\n",
+    "├── real_test\n",
+    "├── real_train_20\n",
+    "├── synthetic_test\n",
+    "├── synthetic_train\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1. Download the dataset <a class=\"anchor\" id=\"head-2-1\"></a>\n",
-    "Once you have gotten the download links in your email, please populate them in place of the `KITTI_IMAGES_DOWNLOAD_URL` and the `KITTI_LABELS_DOWNLOAD_URL`. This next cell, will download the data and place in `$LOCAL_DATA_DIR`"
+    "## 3 Prepare tfrecords from kitti format dataset <a class=\"anchor\" id=\"head-2-3\"></a>\n",
+    "\n",
+    "* Update the tfrecords spec file to take in your kitti format dataset\n",
+    "* Create the tfrecords using the dataset_convert \n",
+    "* TFRecords only need to be generated once."
    ]
   },
   {
@@ -318,44 +287,6 @@
    "source": [
     "# verify\n",
     "!ls -l $LOCAL_DATA_DIR"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Additionally, if you have your own dataset already in a volume (or folder), you can mount the volume on `LOCAL_DATA_DIR` (or create a soft link). Below shows an example:\n",
-    "```bash\n",
-    "# if your dataset is in /dev/sdc1\n",
-    "mount /dev/sdc1 $LOCAL_DATA_DIR\n",
-    "\n",
-    "# if your dataset is in folder /var/dataset\n",
-    "ln -sf /var/dataset $LOCAL_DATA_DIR\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Generate val dataset out of training dataset\n",
-    "# !python3 generate_val_dataset.py --input_image_dir=$LOCAL_DATA_DIR/synthetic_train/image_2 \\\n",
-    "#                                  --input_label_dir=$LOCAL_DATA_DIR/synthetic_train/label_2 \\\n",
-    "#                                  --output_dir=$LOCAL_DATA_DIR/val"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.3 Generate tfrecords from kitti format dataset <a class=\"anchor\" id=\"head-2-3\"></a>\n",
-    "\n",
-    "- Update the tfrecords spec file to take in your kitti format dataset\n",
-    "- Create the tfrecords using the `dataset_convert`\n",
-    "\n",
-    "*Note: TFRecords only need to be generated for the training set once.*"
    ]
   },
   {
@@ -605,7 +536,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.4 Download pre-trained model <a class=\"anchor\" id=\"head-2-4\"></a>"
+    " ## 4 NGC CLI Instalaltion & Download pre-trained model <a class=\"anchor\" id=\"head-2-4\"></a>\n"
    ]
   },
   {
@@ -794,12 +725,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Provide training specification <a class=\"anchor\" id=\"head-3\"></a>\n",
-    "* Pre-trained models\n",
-    "* Augmentation parameters for on the fly data augmentation\n",
-    "* Other training (hyper-)parameters such as batch size, number of epochs, learning rate etc.\n",
-    "* *Note* that in the provided spec file, anchor boxes are set to have 3 aspect ratios (`aspect_ratios_global`) and 3 anchor sizes(`n_anchor_levels`) per feature map cell.\n",
-    "* *Note* that the provided spec file uses `batch_size_per_gpu: 24`, which assumes at least 16G GPU memory. If you need to adjust batch size, please adjust the learning rate accordingly."
+    " ## 5. Provide training specification <a class=\"anchor\" id=\"head-3\"></a>"
    ]
   },
   {
@@ -906,21 +832,20 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4. Run TAO training <a class=\"anchor\" id=\"head-4\"></a>\n",
-    "* Provide the sample spec file and the output directory location for models\n",
-    "* WARNING: training will take several hours or one day to complete"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "!mkdir -p $LOCAL_EXPERIMENT_DIR/experiment_dir_unpruned"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ## 6. Run TAO training on Synthetic Dataset<a class=\"anchor\" id=\"head-4\"></a>\n",
+    " * Provide the sample spec file for training."
    ]
   },
   {
@@ -965,6 +890,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ## 7. Run TAO training or fine tuning on Real Dataset<a class=\"anchor\" id=\"head-4\"></a>\n",
+    " * Provide the sample spec file for training."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -982,7 +915,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Evaluate trained models <a class=\"anchor\" id=\"head-5\"></a>"
+    "## 8. Evaluate trained models <a class=\"anchor\" id=\"head-5\"></a>"
    ]
   },
   {
@@ -1092,7 +1025,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.15"
   }
  },
  "nbformat": 4,
